gallery/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gopher-gallery
spec:
  replicas: 2
  selector:
    matchLabels:
      name: gopher-gallery
  template:
    metadata:
      labels:
        name: gopher-gallery
    spec:
      containers:
      - name: application
        image: e770r/gopher-gallery:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata:
  name: gopher-gallery
  labels:
    app: gopher-gallery
spec:
  type: ClusterIP
  selector:
    app: gopher-gallery
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
